Ajout d'un méta-titre et d'une méta-description pour référencement SEO

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
-
+    <title>La Panthère - Agence de Web Design</title>
+ <meta name="description" Entreprise de web design à Lyon>
     
 <!-- Analytics -->
  
