--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="Fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="agence design lyon, site web, site internet, agence design, web design,creation de sites internet, seo, referencement">
+    <meta name="keywords" content="agence design lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site, creation de sites internet, seo, referencement">
     <meta name="description" content="Entreprise de web design à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -37,8 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="lyon web design logo agence web meilleure agence" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -47,10 +46,7 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
-					</li>
-					<li>
-					</li>
-					<li>
+					</li><li>
 						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
