correction des mots clés de description dans les balises méta ainsi que du meta title sur la page2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="agence design lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site, creation de sites internet, seo, referencement">
-    <meta name="description" content="Entreprise de web design à Lyon">
+    <meta name="description" content="Entreprise de web design à Lyon: création de sites web, stratégie web. Vous souhaitez un site internet pour votre entreprise? Ne cherchez plus et contactez notre agence La Panthère à Lyon.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 	<script src="./js/gmaps.min.js"></script>
 
-    <title>La Panthère - Agence de Web Design</title>
+    <title>La Panthère - Agence de Web Design à Lyon</title>
     
 <!-- Analytics -->
  
