--- a/page2.html
+++ b/page2.html
@@ -2,8 +2,8 @@
 <html lang="Fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="agence design lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site, creation de sites internet, seo, referencement">
+    <meta name="description" content="Entreprise de web design à Lyon: création de sites web, stratégie web. Vous souhaitez un site internet pour votre entreprise? Ne cherchez plus et contactez notre agence La Panthère à Lyon.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.min.js"></script>
 	<script src="./js/formHandler.min.js"></script>
-    <title>page2</title>
+    <title>Agence La Panthère - Contact</title>
 
     
 <!-- Analytics -->
