--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,8 @@
 <html lang="Fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="agence design lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site, creation de sites internet, seo, referencement">
+	<meta name="robots" content="index,follow">
+    <meta name="description" content="La meilleure entreprise de web design à Lyon: Agence La Panthère - Création de sites web, stratégie web. Vous souhaitez un site internet pour votre entreprise? Ne cherchez plus et contactez notre agence La Panthère à Lyon.">
     <meta name="description" content="Entreprise de web design à Lyon: création de sites web, stratégie web. Vous souhaitez un site internet pour votre entreprise? Ne cherchez plus et contactez notre agence La Panthère à Lyon.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -35,7 +36,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="logo la panthere agence de web design à lyon" height="40" /></a>
+				<a class="navbar-brand" aria-label="lien vers la page d'accueil" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="logo la panthere agence de web design à lyon" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -43,12 +44,12 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a aria-label="lien vers la page d'accueil" href="index.html">Accueil</a>
 					</li>
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a aria-label="lien vers la page de contact" href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
