tests sur formulaire

--- a/page2.html
+++ b/page2.html
@@ -92,13 +92,13 @@
 						<label>
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" aria-labelledby="Email" required />
+						<input id="email" class="form-control" type="email" aria-labelledby="Email" required="Email" />
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" aria-labelledby="Réponse" required id="input_504" />
+						<input class="form-control" type="email" aria-labelledby="Réponse" required="texte réponse" id="input_504" />
 					</div>
 					<div class="form-group">
 						<label>
