ajout descriptions sur inputs form

--- a/page2.html
+++ b/page2.html
@@ -86,24 +86,24 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" class="form-control" aria-labelledby="Nom" required="Nom" />
+						<input type="text" id="name" class="form-control" aria-labelledby="Nom" required="Nom" />
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" aria-labelledby="Email" required="Email" />
+						<input type="email" id="email" class="form-control" type="email" aria-labelledby="Email" required="Email" />
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" aria-labelledby="Réponse" required="texte réponse" id="input_504" />
+						<input type="text" class="form-control" type="email" aria-labelledby="Réponse" required="texte réponse" id="input_504" />
 					</div>
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" aria-labelledby="détaillez ici votre projet" required></textarea>
+						</label><textarea name="détaillez votre projet" id="message" class="form-control" rows="4" cols="50" aria-labelledby="détaillez ici votre projet" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
