--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
 						<label>
 							Nom
 						</label>
-						<input type="text" id="name" class="form-control" aria-labelledby="Nom" required="Nom" />
+						<input type="text" id="name" class="form-control" aria-labelledby="Name" required="Nom" />
 					</div>
 					<div class="form-group">
 						<label>
