--- a/page2.html
+++ b/page2.html
@@ -83,10 +83,10 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label for="Name">
+						<label>
 							Nom
 						</label>
-						<input type="text" id="name" class="form-control" aria-labelledby="Name" required="Nom" />
+						<input type="text" id="name" class="form-control" aria-label="Nom" required="Nom" />
 					</div>
 					<div class="form-group">
 						<label>
