--- a/page2.html
+++ b/page2.html
@@ -136,24 +136,47 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a aria-label="lien vers la page twitter de l'agence" class="social" href="twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a aria-label="lien vers la page facebook de l'agence" class="social" href="facebook.com"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a aria-label="lien vers la page dribble de l'agence" class="social" href="dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a aria-label="lien vers la page instagram de l'agence" class="social" href="instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
+					
+				</div><div class="row row-no-gutters social">
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a aria-label="lien vers la page twitter de l'agence" class="social" href="twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a aria-label="lien vers la page facebook de l'agence" class="social" href="facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a aria-label="lien vers la page dribble de l'agence" class="social" href="dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a aria-label="lien vers la page instagram de l'agence" class="social" href="instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 		</div>
