--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				
-				<a class="navbar-brand" aria-label="lien vers la page d'accueil" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="logo agence la panthere web desin lyon" height="40" /></a>
+				<img class="navbar-brand"  src="img/agence-la-panthere-monochrome.webp" alt="logo agence la panthere web desin lyon" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
