modif couleur bannière navbar en atomic tangerin au lieu de white pour rappel du footer et maintien du code couleur

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <main class="page-container">
 <header>    
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<div class="bloc bgc-atomic-tangerine l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
