--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
+				<p class="text-center">
+					Agence La Panthère - Agence de web design basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
