ajustements boutons pour contraste et rendu visuel

--- a/page2.html
+++ b/page2.html
@@ -104,7 +104,7 @@
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea name="détaillez votre projet" id="message" class="form-control" rows="4" cols="50" aria-label="détaillez ici votre projet" ></textarea>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-clean btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
 					</button>
 				</form>
