derniers réglages et amélioration, notamment du responsive sur mobile

--- a/page2.html
+++ b/page2.html
@@ -43,12 +43,10 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a aria-label="lien vers la page d'accueil" href="index.html">Accueil</a>
-					</li>
+						<a class="navlink" aria-label="lien vers la page d'accueil" tabindex="2" href="index.html">Accueil</a>
+  					</li>
 					<li>
-					</li>
-					<li>
-						<a aria-label="lien vers la page de contact" href="page2.html">Contact</a>
+						<a class="navlink" aria-label="lien vers la page de contact" tabindex="1" href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
