--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<main class="page-container">
+<main class="page-container" aria-label="corps de la page">
 <header>    
 <!-- bloc-0 -->
-<div class="bloc bgc-atomic-tangerine l-bloc " id="bloc-0">
+<div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
 			<div class="navbar-header">
 				
-				<img class="navbar-brand"  src="img/agence-la-panthere-monochrome.webp" alt="logo agence la panthere web desin lyon" height="40" />
+				<img rel="preload" as="image" class="navbar-brand"  src="img/agence-la-panthere-monochrome.webp" alt="logo agence la panthere web desin lyon" height="40" />
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -45,10 +45,10 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a aria-label="lien vers la page d'accueil" href="index.html">Accueil</a>
+						<a class="navlink" aria-label="lien vers la page d'accueil" tabindex="-1" href="index.html">Accueil</a>
   					</li>
 					<li>
-						<a aria-label="lien vers la page de contact" href="page2.html">Contact</a>
+						<a class="navlink" aria-label="lien vers la page de contact" tabindex="0" href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -133,7 +133,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
-				<h2 class="mg-md text-center tc-white">
+				<h2 class="mg-md text-center tc-atomic-tangerine">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
