--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				
-				<img rel="preload" as="image" class="navbar-brand"  src="img/agence-la-panthere-monochrome.webp" alt="logo agence la panthere web desin lyon" height="40" />
+				<img rel="preload" class="navbar-brand"  src="img/agence-la-panthere-monochrome.webp" alt="logo agence la panthere web desin lyon" height="40" />
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -214,7 +214,7 @@
 	</div>
 </section>
 <!-- bloc-5-cta END -->
-
+</main>
 <!-- Footer - bloc-8 -->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
