modification page2 en contact sur fichier et liens correspondants

--- a/Contact.html
+++ b/Contact.html
@@ -46,7 +46,7 @@
 						<a class="navlink" aria-label="lien vers la page d'accueil" tabindex="2" href="index.html">Accueil</a>
   					</li>
 					<li>
-						<a class="navlink" aria-label="lien vers la page de contact" tabindex="1" href="page2.html">Contact</a>
+						<a class="navlink" aria-label="lien vers la page de contact" tabindex="1" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
