correction labels avec attributs correspondants

--- a/Contact.html
+++ b/Contact.html
@@ -80,25 +80,25 @@
 			<div class="col-sm-6">
 				<form id="form_1" >
 					<div class="form-group">
-						<label>
+						<label for="entrer nom">
 							Nom
 						</label>
 						<input type="text" id="name" class="form-control" required aria-label="Nom" />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="entrer email">
 							Adresse email
 						</label>
 						<input type="email" id="email" class="form-control" required aria-label="Email"  />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="question">
 							Comment nous avez-vous connu ?
 						</label>
 						<input type="text" class="form-control" aria-label="Réponse" required id="input_504" />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="réponse">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea name="détaillez votre projet" id="message" class="form-control" rows="4" cols="50" aria-label="détaillez ici votre projet" ></textarea>
 					</div> 
