--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<a class="navlink" aria-label="lien vers la page d'accueil" tabindex="-1" href="index.html">Accueil</a>
   					</li>
 					<li>
-						<a class="navlink" aria-label="lien vers la page de contact" tabindex="0" href="contact.html">Contact</a>
+						<a class="navlink" aria-label="lien vers la page de contact" tabindex="0" href="Contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -137,7 +137,7 @@
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="Contact.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -208,7 +208,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a aria-label="lien vers la page de contact" href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a aria-label="lien vers la page de contact" href="Contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
